Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listener-deployment
spec:
  selector:
    matchLabels:
      app: listener
  replicas: 1
  template:
    metadata:
      labels:
        app: listener
    spec:
      containers:
        - name: listener-container
          image: vishnevii/listener:listener
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
