Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: listener-app-service
spec:
  selector:
    app: listener-app
  ports:
    - port: 8082
      targetPort: 8082
